@startuml
!theme plain
hide empty members

left to right direction

package "Entity" {
    abstract class Content {
        - Integer contentId
        - ContentType type
        - Integer authorId
        - Boolean isHidden
        - DateTime createdAt
        + hide()
        + restore()
        + getById()
        + setVisibility()
    }

    class Post {
        - Integer postId
        - Integer authorId
        - String content
        - List<MediaAsset> mediaAssets
        - PostVisibility visibility
        - Integer reactionCount
        - Integer commentCount
        - Boolean isHidden
        - DateTime createdAt
        - DateTime updatedAt
        + create()
        + update()
        + delete()
        + getById()
        + getPublicFeed()
        + getByAuthor()
        + incrementReactionCount()
        + incrementCommentCount()
        + setVisibility()
    }

    class Comment {
        - Integer commentId
        - Integer postId
        - Integer authorId
        - String content
        - Integer parentCommentId
        - Boolean isHidden
        - DateTime createdAt
        - DateTime updatedAt
        + create()
        + update()
        + delete()
        + getByPost()
        + getReplies()
        + setVisibility()
    }

    class Reaction {
        - Integer reactionId
        - Integer postId
        - Integer userId
        - ReactionType type
        - DateTime createdAt
        + create()
        + delete()
        + exists()
        + getByPost()
        + toggle()
    }

    class Report {
        - Integer reportId
        - Integer reporterId
        - Integer reportedUserId
        - Integer contentId
        - ContentType contentType
        - String reason
        - String details
        - ReportStatus status
        - DateTime createdAt
        - DateTime resolvedAt
        + create()
        + updateStatus()
        + getById()
        + getPending()
        + getByReporter()
        + resolve()
        + dismiss()
    }
}

package "Controller" {
    class ContentController {
        - PostRepository postRepository
        - CommentRepository commentRepository
        - ReactionRepository reactionRepository
        - NotificationController notificationController
        + createPost()
        + getPublicFeed()
        + addComment()
        + toggleReaction()
        - validateContent()
        - notifyAuthor()
    }

    class ModerationController {
        - ReportRepository reportRepository
        - ContentRepository contentRepository
        - NotificationController notificationController
        + createReport()
        + getPendingReports()
        + getReportDetails()
        + resolveReport()
        + dismissReport()
        + removeContent()
        - notifyParties()
    }
}

package "External" {
    class UserAccount <<External>>
    class MediaAsset <<External>>
    class NotificationController <<External>>
    enum ModerationAction <<External>>
}

package "Repository" {
    interface ContentRepository < Content >
    interface PostRepository < Post >
    interface CommentRepository < Comment >
    interface ReactionRepository < Reaction >
    interface ReportRepository < Report >
}

' --- RELATIONSHIPS ---

UserAccount "1" -- "*" Post : creates (External)
UserAccount "1" -- "*" Comment : creates (External)
UserAccount "1" -- "*" Report : creates (External)

Content <|-- Post
Content <|-- Comment

Post "1" --> "*" Comment : has
Post "1" --> "*" Reaction : receives
Post "1" --> "*" Report : may have

ContentController ..> PostRepository : uses
ContentController ..> CommentRepository : uses
ContentController ..> ReactionRepository : uses
ContentController ..> NotificationController : uses

ModerationController ..> ReportRepository : uses
ModerationController ..> ContentRepository : uses
ModerationController ..> NotificationController : uses

' --- ENUMS ---

enum ContentType {
    Post
    Comment
    User
}

enum PostVisibility {
    Public
    Private
    TeamOnly
}

enum ReactionType {
    Like
    Love
    Celebrate
}

enum ReportStatus {
    Pending
    Resolved
    Dismissed
}
@enduml
